Fixed progress bar bug and detection on chrome.

--- a/index.html
+++ b/index.html
@@ -37,40 +37,6 @@
     <body>
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-     <div id="eq">
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-      <div class="eqbar"></div>
-     </div>
       <div class="container">
         <h1 id="title">Drag a Midi</h1>
         <p id="extrainfo">|</p>
@@ -95,23 +61,23 @@
         <div class="col-lg-4">
           <h2>Recent MIDIs</h2>
           <div id="files" class="btn-group-vertical"></div>
-          <p><a class="btn btn-default" href="#">Complete List &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <h2>Stats:</h2>
-          <p>Notes Played: <div id="notesplayed">0</div></p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <p>Notes Played: <span id="notesplayed">0</span></p>
+          <p>Notes Played This Midi: <span id="notesplayedthissong">0</span></p>
+          <p>Notes per Second: <span id="notespersecond">0</span></p>
        </div>
         <div class="col-lg-4">
           <h2>About NesMachine</h2>
           <p>About the project</p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <p><a class="btn btn-default" target="_new" href="https://github.com/Half-Shot/NesMachine">View details &raquo;</a></p>
         </div>
       </div>
       <hr>
       <div id="dragfileshere" style="border-style:dashed solid; background-image:url('img/dropmidi.gif'); left:25%; width:100%; opacity:0.8;text-align:center"><span style=" pointer-events: none;"><h1>Drop MIDI Here</h1></span></div>
       <footer>
-        <p>By Half-Shot | MIT Licenced on <a href="http://github.com/Half-Shot/NesMachine" target="_new">Github</a></p>
+        <p>By Half-Shot | MIT Licenced on <a href="https://github.com/Half-Shot/NesMachine" target="_new">Github</a></p>
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
